--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -46,3 +46,48 @@ li {
   width: 360px;
   height: 200px;
 }
+
+.feedback-form {
+  display: inline-flex;
+  padding: 24px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 16px;
+}
+
+label {
+color: #2E2F42;
+font-family: Montserrat;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: 24px;
+letter-spacing: 0.64px;
+margin-bottom: 8px;
+}
+.mail {
+  display: flex;
+  width: 360px;
+  height: 40px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 4px;
+  border: 1px solid #808080;
+  padding: 8px;
+}
+
+.mail::placeholder {
+  color: #2E2F42;
+  font-family: Montserrat;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0.64px;
+}
+.text {
+  width: 360px;
+  height: 80px;
+  border-radius: 4px;
+  border: 1px solid #808080;
+}
