--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -55,17 +55,23 @@ li {
   gap: 16px;
 }
 
-label {
-color: #2E2F42;
-font-family: Montserrat;
-font-size: 16px;
-font-style: normal;
-font-weight: 400;
-line-height: 24px;
-letter-spacing: 0.64px;
-margin-bottom: 8px;
+.label {
+  color: #2E2F42;
+  font-family: Montserrat;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.5em;
+  letter-spacing: 0.64px;
 }
 .mail {
+  color: #2E2F42;
+  font-family: Montserrat;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0.64px;
   display: flex;
   width: 360px;
   height: 40px;
@@ -73,7 +79,13 @@ margin-bottom: 8px;
   align-items: center;
   border-radius: 4px;
   border: 1px solid #808080;
-  padding: 8px;
+  padding-left: 16px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+}
+.mail:hover, 
+.mail:focus {
+  border: 1px solid #000;
 }
 
 .mail::placeholder {
@@ -86,8 +98,48 @@ margin-bottom: 8px;
   letter-spacing: 0.64px;
 }
 .text {
+  color: #2E2F42;
+  font-family: Montserrat;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0.64px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-left: 16px;
+  padding-top: 8px;
+  padding-bottom: 8px;
   width: 360px;
   height: 80px;
   border-radius: 4px;
   border: 1px solid #808080;
+}
+
+.text:hover,
+.text:focus {
+  border: 1px solid #000;
+}
+.btn {
+  display: flex;
+  padding: 8px 16px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  color: #FFF;
+  font-family: Montserrat;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.5em;
+  letter-spacing: 0.64px;
+  border-radius: 8px;
+  background: #4E75FF;
+  border: none;
+}
+
+.btn:hover, 
+.btn:focus {
+  background: #6C8CFF;
 }
