--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -56,6 +56,9 @@ li {
 }
 
 .label {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
   color: #2E2F42;
   font-family: Montserrat;
   font-size: 16px;
@@ -63,6 +66,7 @@ li {
   font-weight: 400;
   line-height: 1.5em;
   letter-spacing: 0.64px;
+  
 }
 .mail {
   color: #2E2F42;
